--- a/index.html
+++ b/index.html
@@ -4,9 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="img-container">
+        <div class="logo">
+            <img src="./odin-lined.png" alt="sign up logo" class="sign-up-logo">
+            <div>SignUp Form</div>
+        </div>
+        <img src="./backgroundImg.jpg" class="img" alt="Background Image">
+    </div>
+    <div class="form-content">
+        <div class="text-content">
+            <div>
+                This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
+                Sign up <em>now</em> to get started.
+            </div>
+            <div class="bottom-text">
+                You <em>know</em> you want to.
+            </div>
+        </div>
+        <form action="#" class="main-form">
+            <div class="form-header">Let's do this</div>
+
+            <div class="field name-fields">
+                <div>
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" id="first-name"> 
+                </div>
+                <div>
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" id="last-name"> 
+                </div>
+            </div>
+            <div class="field name-fields">
+                <div>
+                    <label for="email">EMAIL</label>
+                    <input type="email" id="email"> 
+                </div>
+                <div>
+                    <label for="phone">PHONE</label>
+                    <input type="tel" id="phone"> 
+                </div>
+            </div>
+            <div class="field name-fields">
+                <div>
+                    <label for="password">PASSWORD</label>
+                    <input type="password" id="password"> 
+                </div>
+                <div>
+                    <label for="confirm-password">LAST NAME</label>
+                    <input type="password" id="confirm-password"> 
+                </div>
+            </div>
+        </form>
+
+        <div class="create-section">
+            <button class="create-button">Create Account</button>
+            <div class="login-prompt">
+                Already have an account? <a href="#">Log in</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
