add dummy validition for password field

--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
             <div class="field name-fields">
                 <div>
                     <label for="password">PASSWORD</label>
-                    <input type="password" id="password"> 
+                    <input type="password" id="password" required>
+                    <span class="passowrd-error"></span> 
                 </div>
                 <div>
                     <label for="confirm-password">LAST NAME</label>
-                    <input type="password" id="confirm-password"> 
+                    <input type="password" id="confirm-password" required> 
                 </div>
             </div>
         </form>
