--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="logo">
             <img src="./odin-lined.png" alt="sign up logo" class="sign-up-logo">
             <div>SignUp Form</div>
+            
+        </div>
+        <div class="credits">
+            Photo By Halie West on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>
         </div>
         <img src="./backgroundImg.jpg" class="img" alt="Background Image">
     </div>
