fix typo in confirm password field

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <span class="passowrd-error"></span>
           </div>
           <div>
-            <label for="confirm-password">LAST NAME</label>
+            <label for="confirm-password">CONFIRM PASSWORD</label>
             <input type="password" id="confirm-password" required />
           </div>
         </div>
